tests/compile_fail/borrow/qualified_associated_type.rs
trait Trait {
    type Assoc;
}

#[derive(derive_more::Borrow)]
struct Foo<T: Trait>(<T as Trait>::Assoc);

fn main() {}
